# pspgles

./: CMakeLists.txt  README.md  glClear.c  glClearColor.c  glDisable.c  glEnable.c  glFinish.c  glFlush.c  glLoadIdentity.c  glMatrixMode.c  glOrtho.c  glScissor.c  glShadeModel.c  glViewport.c  internal.c
include/GLES/: gl.h
private/: internal.h
